# kaleidolift

./: Cargo.toml  Makefile  README.md
src/: ast.rs  codegen.rs  lexer.rs  main.rs  parser.rs
tests/: fib.kal  plus.kal  test_1.kal  test_2.kal  test_3.kal  test_4.kal  test_5.kal  test_6.kal
