[package]
name = "kaleidolift"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.48"
cranelift = "0.79"
cranelift-module = "0.79"
cranelift-codegen = "0.79"
cranelift-jit = "0.79"
target-lexicon = "0.3.0"
